# com-304-Team-11

./: .gitignore  TEAM.md
nano4M/: pyproject.toml  run_evaluation.py  setup_env.sh  submit_eval_job.sh  submit_job.sh
nano4M/cfgs/nano4M/: multiclevr_d6-6w512.yaml  multiclevr_d6-6w512_baseline.yaml  multiclevr_d6-6w512_block.yaml  multiclevr_d6-6w512_ctxblock.yaml  multiclevr_d6-6w512_mixed.yaml  multiclevr_d6-6w512_span.yaml
nano4M/cfgs/nanoGPT/: mnist_d8w512.yaml  tinystories_d8w512.yaml
nano4M/cfgs/nanoMaskGIT/: mnist_d8w512.yaml  tinystories_d8w512.yaml
nano4M/nanofm/evaluation/: __init__.py  eval_harness.py  hungarian_match.py  llm_judge.py  metrics.py  model_revisions.py  rgb_verifier.py  scene_parser.py  statistical_tests.py
nano4M/nanofm/modeling/: dit.py  transformer_layers.py
nano4M/nanofm/models/: fourm.py  gpt.py  maskgit.py  rectified_flow.py
nano4M/notebooks/: COM304_FM_part1_nanoGPT.ipynb  COM304_FM_part2_nanoMaskGIT.ipynb  COM304_FM_part3_nano4M.ipynb  COM304_FM_part4_nanoFlowMatching.ipynb
nano4M/scripts/: aggregate_eval_results.py  cosmos_sanity_check.py  extract_scene_desc_samples.py  grounding_dino_recall_gate.py  inspect_scene_desc.py  prefetch_eval_models.py  validate_masks.py  visualize_block_masking.py
nano4M/tests/: test_block_masking.py  test_context_block_masking.py  test_llm_judge.py  test_metrics.py  test_rgb_verifier.py  test_scene_parser.py  test_scene_parser_integration.py  test_span_masking.py  test_statistical_tests.py
nano4M/tests/fixtures/: cosmos_sanity_result.txt  scene_desc_samples.txt  validate_masks_result.txt
(+12 files in other folders)
