[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanofm"
version = "1.0.0"
description = "nano4M"
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "fourm @ git+https://github.com/apple/ml-4m.git@main#egg=fourm",
    "omegaconf",
    "hydra-core",
    "mediapy",
    "loguru",
    "ipykernel",
]

[project.optional-dependencies]
eval = [
    # Phase C — Qwen LLM-as-judge.
    "transformers>=4.40",
    "accelerate",
    # Phase A/B — image-level metrics.
    "torchmetrics",
    "torch-fidelity",
    "scikit-image",
    # Optional: 4-bit Qwen quantisation if memory tight.
    # "bitsandbytes",
]

[project.urls]
"Homepage" = "https://vilab.epfl.ch"

[tool.setuptools.packages.find]
exclude = ["cfgs*", "assets*", "notebooks*"]

[tool.wheel]
exclude = ["cfgs*", "assets*", "notebooks*"]